--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-reanimated": "1.13.2",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "2.18.1",
     "react-native-web": "0.15.0",
     "react-scripts": "3.4.1"
   },
